--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
     "build:dashboard": "vite build",
     "start:server": "node ./dist/index.js",
     "start:worker": "node ./dist/index-worker.js",
-    "start": "concurrently npm:start:*"
+    "start": "concurrently npm:start:*",
+    "migration:generate": "node node_modules/@vendure/cli/dist/cli.js migrate --generate",
+    "migration:run": "node node_modules/@vendure/cli/dist/cli.js migrate --run",
+    "migration:revert": "node node_modules/@vendure/cli/dist/cli.js migrate --revert"
   },
   "dependencies": {
     "@vendure/dashboard": "3.5.2",
